Products.CMFCore Changelog
==========================

2.3.0-alpha (unreleased)
------------------------

- Get most tests working under Zope 2.13.0a2.

- Added dependency on the new ``Products.ZSQLMethods`` distribution and updated
  Zope2 requirement accordingly.

- CookieCrumbler: Removed redirect support.
  The Unauthorized handling and redirects are now part of CMFDefault.

- Use the standard libraries doctest module.

- Updated setDefaultRoles to use the addPermission API if available.

- Added a permissions.zcml file defining our own permissions. This was
  formerly done in Zope 2's Products.Five.

- Actions and TypeInformation: Clear the compiled *_expr_object
  property when the *_expr property is cleared.

- Changed GenericSetup import handlers to fail silently if they
  are called in a context that does not contain the items they 
  import.

- Removed zope.app.testing dependency.

- Import BeforeTraverseEvent from new location if available.

- Skinnable and MembershipTool: Removed support for missing REQUEST argument.
  'changeSkin', 'setupCurrentSkin' and 'credentialsChanged' will no longer
  try to acquire the request if it is not passed in explicitly.

- Tools and PortalFolder: Removed support for deprecated marker attributes.
  '_isDirectoryView', '_isPortalRoot', '_isTypeInformation' and '_isAWorkflow'
  are no longer supported.

- utils: Removed deprecated functions.
  'getToolByInterfaceName', 'initializeBasesPhase1', 'initializeBasesPhase2',
  'expandpath' and 'minimalpath' are no longer available.

- DirectoryView: Removed support for deprecated old API.


2.2.0-beta (2009-12-06)
-----------------------

- TypesTool: Made it an ordered container.
  This allows to control the order of the add actions.

- TypeInformation: Removed redundant 'content_icon' property.
  For backwards compatibility old settings containing 'content_icon' instead
  of 'icon_expr' are converted on import. CMFDefault provides the necessary