@@ -4,6 +4,13 @@ Products.CMFCore Changelog
 2.3.0-alpha (unreleased)
 ------------------------
 
+- DateTime 2.12.5 does away with a special case representing
+  DateTime values for midnight (00:00:00) without their time and
+  time zone values. So DateTimes formerly rendered as
+  ``2010/01/01`` in the UTC timezone now render as
+  ``2010/01/01 00:00:00 UTC``. Several unit tests that relied on 
+  the old-style representation had to be fixed.
+
 - Get most tests working under Zope 2.13.0a2.
 
 - Added dependency on the new ``Products.ZSQLMethods`` distribution and updated
